@@ -13,8 +13,8 @@
  *  for the specific language governing permissions and limitations under the License.
  */
 
-String devVersion()  { return "3.2.0.3"}
-String devModified()  { return "2019-10-21" }
+String devVersion()  { return "3.2.0.2"}
+String devModified() { return "2019-10-21" }
 Boolean isBeta()     { return false }
 Boolean isST()       { return (getPlatform() == "SmartThings") }
 Boolean isWS()       { return false }
