@@ -11,7 +11,7 @@
             "ver": "3.2.0.3"
         },
         "echoDevice": {
-            "ver": "3.2.0.3"
+            "ver": "3.2.0.2"
         },
         "wsDevice": {
             "ver": "3.2.0.0"
